crates/edifact-rs-derive/tests/ui/fail_qualifier_from_without_segment.stderr
error: #[edifact(qualifier = ...)] / #[edifact(qualifier_from = ...)] require #[edifact(segment = ...)]
  --> $DIR/fail_qualifier_from_without_segment.rs:14:11
   |
14 | #[edifact(qualifier_from = 0)]
   |           ^^^^^^^^^^^^^^
